# flipdot

./: .gitignore  CMakeLists.txt  README.md  attribs  bom.ods  busskilt.py
atmega/: Makefile  blink.c
dotflipctl/: .gitignore  dotflipctl.bom.ods  dotflipctl.pcb  dotflipctl.sch
dotflipctl/gerbers/: dotflipctl-20121129.fab.gbr  dotflipctl-20121129.gbl  dotflipctl-20121129.gbs  dotflipctl-20121129.gtl  dotflipctl-20121129.gts  dotflipctl-20121129.outline.gbr  dotflipctl-20121129.plated-drill.txt
fakemos/: CMakeLists.txt  PbmDraw.h  TerminalFake.cpp  TerminalFake.h  main.cpp  maze.h
fakemos/res/: first.pbm  lg.pbm  low.pbm
flipmos/: CMakeLists.txt  Config.h.in  FlipDot.h  PbmDraw.h  Readme.md  arduino-cli.yaml  flipmos.ino
flipper/: master_setup_1.sch
flyboy/: .gitignore  CMakeLists.txt  Makefile  README  flyboy.c
gerbers/: dotflipctl-20121129.gto
qflipdot/: .gitignore  CMakeLists.txt  README  fddialog.cpp  fddialog.h  main.cpp  qflipdot.cpp  qflipdot.h  qflipdot.pro
tetris/: CMakeLists.txt  Makefile  game.c  game.h  main.c  sdl_game.c  sdl_game.h
